Whiting for update server
